tests/macros/password/editor.stderr
error: option `editor` does not exist for kind `password`
 --> tests/macros/password/editor.rs:2:46
  |
2 |     let q = requestty::questions![Password { editor: todo!() }];
  |                                              ^^^^^^
