tests/macros/password/editor.rs
fn main() {
    let q = requestty::questions![Password { editor: todo!() }];
}
